# finchers-graphql-example

./: .env.sample  .gitignore  Cargo.toml  README.md  diesel.toml
migrations/2018-09-03-090811_create_users/: up.sql
migrations/2018-09-07-073209_create_posts/: up.sql
src/: endpoints.rs  graphql.rs  lib.rs  main.rs  token.rs
src/database/: conn.rs  mod.rs  model.rs  schema.patch  schema.rs
src/graphql/: context.rs  mod.rs  resolver.rs
