cargo-features = ["edition"]

[package]
name = "finchers-graphql-example"
version = "0.0.0"
edition = "2018"
publish = false

[dependencies]
finchers = { git = "https://github.com/finchers-rs/finchers.git", branch = "master" }
finchers-juniper = { git = "https://github.com/finchers-rs/finchers-juniper.git", branch = "master" }
juniper = "0.9.2"

[patch.crates-io]
juniper = { git = "https://github.com/graphql-rust/juniper.git", branch = "master" }
